# NYC_mobility

./: .gitignore  Justfile  README.md  TEMP_PUSH_NOTES.md  code.txt  main.html  main.py  pyproject.toml  styles.css  test.txt
Utilities/: clean.sh  download_datasets.py
data/: RidershipMode_Full Data_data.csv
data/raw_traffic_counts/: Automated_Traffic_Volume_Counts.parts.json
scripts/: start_jupyter_lab.sh
src/nyc_mobility/: __init__.py
src/nyc_mobility/pipeline/: __init__.py  clean_citybike_data.py  clean_data.py  download_all_data.py  download_bus_data.py  download_citybike_data.py  download_subway_data.py  download_taxi_data.py  download_walk_data.py
tools/: build_isochrones_approx.py  build_isochrones_full.py  build_isochrones_transit.py  build_reports_csv.py  build_traffic_csvs.py  build_tripdata_csvs.py  build_tripdata_routes.py  build_yellow_taxi_csvs.py  download_citibike_tripdata.py  filter_fhv_geojson.py  run_full_pipeline.sh  split_large_data_files.py  split_traffic_counts.py
web/: index.html  mobile.html  temp.txt
web/css/: styles.css
web/css/charts/: bikes-map.css  buses-map.css  general-map.css  how-people-move.css  subway-map.css  taxis-map.css  traffic.css  transport-usage.css  tripdata.css  walking-map.css
web/data/: map_Full Data_data.csv
web/js/: main.js
web/js/charts/: bikes-map.js  boroughs-map.js  buses-map.js  how-people-move.js  isochrones-map.js  overview-map.js  subway-map.js  taxi-charts.js  taxis-map.js  traffic-volume.js  transport-usage.js  tripdata.js  walking-collisions.js  walking-map.js
web/js/utils/: lazy-init.js  (+1 more)
(+35 files in other folders)
